自己紹介文を修正

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 <p class="profile">高校時代にゲーム制作にハマり、大学時代のバイトでWebページ制作を学ぶ。<br>
                 Webアプリやハードウェア、VRゲーム、アナログゲームなどモノ作りがとにかく好き。<br>
                 PHP(Laravel)、JavaScriptがメインだが、PythonやC++、Ruby、Unityなども必要があれば触る。<br>
-                趣味はVRと旅行、DJと音楽ゲーム。VRの楽しさを広めるため、開発だけではなく記事を書いたりイベントを開催している。</p>
+                趣味はVRと旅行、DJ、音楽ゲーム、TRPG。<br>
+                好きなモノを広めるために、記事執筆やイベント開催など、多角的に活動している。</p>
             </div>
         </section>
 
